smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/set-empty-members.smithy
// Parse error at line 4, column 12 near `}\n`: Missing required members of shape `com.foo#MySet`: [`member`]
namespace com.foo

set MySet {}
